last small changes

--- a/chpt/4-2-2-11_PDM.tex
+++ b/chpt/4-2-2-11_PDM.tex
@@ -11,7 +11,7 @@ An 24 Fundstellen, ausschließlich am mittleren und oberen \mbox{Sangha} sowie d
 
 
 \paragraph{Technologische Merkmale}\hspace{-.5em}|\hspace{.5em}%
-Die Keramik der Pandama-Gruppe zeichnet sich durch Scherben aus, die regelhaft einen hohen Anteil nichtplastischer Partikel aufweisen. Über 75\,\% aller Scherben weisen mehr als 15–20\,\% nichtplastische Partikel auf. Der Anteil der Stücke, die keinerlei oder nur wenige (\textless\,5\,\%) nichtplastische Partikel enthalten, liegt unter 7\,\%. Die Korngröße dieser nichtplastischen Partikel schwankt zwischen \textit{medium} (26\,\%) und \textit{very coarse} (18\,\%), wobei vor allem die Größenklasse \textit{coarse} (56\,\%) vertreten ist. Die Pandama-Keramik wird durch die \textit{Fabrics} 4 (51\,\%) sowie 3 (37\,\%) bestimmt. Die meisten Stücke sind den Varianten 4c (25\,\%), 3a (24\,\%) sowie 4a (23\,\%) zuzuordnen. Aufgrund vornehmlich grauer, beiger oder schwarzer Färbungen von 57\,\% der GE ist eine Ansprache der Brennfarbe der genutzten Tone nur bedingt zuverlässig möglich. Rötliche wie weißliche Färbungen nehmen in der Kategorie jener Stücke, deren Brennfarbe ansprechbar ist, in etwa den gleichen Anteil ein und machen jeweils knapp 20\,\% aus. Die Oberflächen der Stücke sind entweder glatt (40\,\%) oder leicht rau (47\,\%). Die Wandungsdicke liegt zwischen 4 und 10\,mm bei einem arithmetischen Mittel von 6,2\,mm und einer geringen Varianz von nur 2,1\,mm. 
+Die Keramik der Pandama-Gruppe zeichnet sich durch Scherben aus, die regelhaft einen hohen Anteil nichtplastischer Partikel aufweisen. Über 75\,\% aller Scherben weisen mehr als 15--20\,\% nichtplastische Partikel auf. Der Anteil der Stücke, die keinerlei oder nur wenige (\textless\,5\,\%) nichtplastische Partikel enthalten, liegt unter 7\,\%. Die Korngröße dieser nichtplastischen Partikel schwankt zwischen \textit{medium} (26\,\%) und \textit{very coarse} (18\,\%), wobei vor allem die Größenklasse \textit{coarse} (56\,\%) vertreten ist. Die Pandama-Keramik wird durch die \textit{Fabrics} 4 (51\,\%) sowie 3 (37\,\%) bestimmt. Die meisten Stücke sind den Varianten 4c (25\,\%), 3a (24\,\%) sowie 4a (23\,\%) zuzuordnen. Aufgrund vornehmlich grauer, beiger oder schwarzer Färbungen von 57\,\% der GE ist eine Ansprache der Brennfarbe der genutzten Tone nur bedingt zuverlässig möglich. Rötliche wie weißliche Färbungen nehmen in der Kategorie jener Stücke, deren Brennfarbe ansprechbar ist, in etwa den gleichen Anteil ein und machen jeweils knapp 20\,\% aus. Die Oberflächen der Stücke sind entweder glatt (40\,\%) oder leicht rau (47\,\%). Die Wandungsdicke liegt zwischen 4 und 10\,mm bei einem arithmetischen Mittel von 6,2\,mm und einer geringen Varianz von nur 2,1\,mm. 
 
 
 \paragraph{Formen}\hspace{-.5em}|\hspace{.5em}%
