--- a/chpt/4-2-2-1_PKM.tex
+++ b/chpt/4-2-2-1_PKM.tex
@@ -64,7 +64,7 @@ Mit Keramik des Pikunda-Munda-Stils sind neun Radiokohlenstoffdatierungen assozi
 	\label{fig:PIKMUN_Verbreitung}
 \end{figure*}
 
-Der Beginn des Pikunda-Munda-Stils kann auf Basis der vorliegenden Datierungen in das 2.--1.~Jh. v.~Chr. datiert werden (Abb.~\ref{fig:PIKMUN_14C}), wenn die Datierung KI-2887 (Tab.~\ref{tab:MUN87-211_14C-Daten}; Anlage 2) ausgelassen wird, das diese einen besonders hohen Standardfehler aufweist. Die jüngsten Radiokohlenstoffdatierungen für Pikunda-Munda-Keramik stammen aus dem Befund MUN~87/3 in Munda am \mbox{Likwala}-\mbox{aux}-\mbox{Herbes} und fallen in das 2.-6.~Jh. n.~Chr. (Abb.~\ref{fig:PIKMUN_14C}: KI-2889, KI-2890).\footnote{Die Keramik dieses Befundes spiegelt mit einer Schale vom Typ F3 (Abb.~\ref{fig:PIKMUN_TypVertreter}.9) die formalen Charakteristika der Untergruppe II wider.} Bereits \textsc{Wotzka} (1995: 107 Anm.~4) hat auf den Umstand hingewiesen, dass sich gewisse Merkmale der Pikunda-Munda-Keramik auch bei keramischen Stilgruppen des Inneren Kongobeckens beobachten lassen (Tab.~\ref{tab:PIKMUN_Vgl}).\footnote{Der Pikunda-Munda-Gruppe auf Merkmalsebene nahestehende Gefäße fanden sich im Zusammenhang mit Feldarbeit an der Fundstelle Yatou in Kamerun an der Mündung des Sanaga-Flusses (siehe Kap.~\ref{sec:Kamerun}). Die beiden aus dem Befund YAT~99/1 vorliegenden Radiokohlenstoffdatierungen decken das 1. Jh. v. Chr. bis 1. Jh. n. Chr. (KIA-12942) sowie das 7.--9. Jh. n. Chr. (KIA-12941) ab. Gerade die ältere der beiden Datierungen lässt sich leicht mit dem hier postulierten Alter für die Pikunda-Munda-Gruppe in Einklang bringen. Eine detaillierte Auswertung der Befunde und Funde aus Yatou steht gegenwärtig aus (Kap.~\ref{sec:Kamerun}).} Während die für den Pikunda-Munda-Stil charakteristischen Schalen keine Entsprechung im Fundgut des Inneren Kongobeckens finden, so ist Kamm-Wiegeband-Dekor ein starkes Merkmal der ältesten Stile Imbonga, Bonkake und Ingende (ebd. 59--78). Auch ein aus überkreuzenden, feinen Ritzlinien bestehendes Dekor findet sich in zeitgleichen Stilen, allen voran der Lokondola-Gruppe.\footnote{Eine Scherbe dieses Stils fand sich auch in der älteren, in Pikunda erfassten Grube (Kat.-Nr.~8).} Zusammenfassend lässt sich festhalten, dass der Pikunda-Munda-Stil stilistisch einige lose Anbindungen an die zeitgleichen Stilgruppen des Inneren Kongobeckens aufweist, jedoch mit Blick auf die Keramiktechnologie nicht von der weiter östlich gefunden Keramik unterscheidbar ist. Zusammenfassend kann die Pikunda-Munda-Keramik gegenwärtig mit hinreichender Sicherheit in das 2.--1.~Jh. v.~Chr. bis 5.--6.~Jh. n.~Chr. datiert werden.
+Der Beginn des Pikunda-Munda-Stils kann auf Basis der vorliegenden Datierungen in das 2.--1.~Jh. v.~Chr. datiert werden (Abb.~\ref{fig:PIKMUN_14C}), wenn die Datierung KI-2887 (Tab.~\ref{tab:MUN87-211_14C-Daten}; Anlage 2) ausgelassen wird, das diese einen besonders hohen Standardfehler aufweist. Die jüngsten Radiokohlenstoffdatierungen für Pikunda-Munda-Keramik stammen aus dem Befund MUN~87/3 in Munda am \mbox{Likwala}-\mbox{aux}-\mbox{Herbes} und fallen in das 2.-6.~Jh. n.~Chr. (Abb.~\ref{fig:PIKMUN_14C}: KI-2889, KI-2890).\footnote{Die Keramik dieses Befundes spiegelt mit einer Schale vom Typ F3 (Abb.~\ref{fig:PIKMUN_TypVertreter}.9) die formalen Charakteristika der Untergruppe II wider.} Bereits \textsc{Wotzka} (1995: 107 Anm.~4) hat auf den Umstand hingewiesen, dass sich gewisse Merkmale der Pikunda-Munda-Keramik auch bei keramischen Stilgruppen des Inneren Kongobeckens beobachten lassen (Tab.~\ref{tab:PIKMUN_Vgl}).\footnote{Der Pikunda-Munda-Gruppe auf Merkmalsebene nahestehende Gefäße fanden sich im Zusammenhang mit Feldarbeit an der Fundstelle Yatou in Kamerun an der Mündung des Sanaga-Flusses (siehe Kap.~\ref{sec:Kamerun}). Die beiden aus dem Befund YAT~99/1 vorliegenden Radiokohlenstoffdatierungen decken das 1.~Jh. v.~Chr. bis 1.~Jh. n.~Chr. (KIA-12942) sowie das 7.--9.~Jh. n.~Chr. (KIA-12941) ab. Gerade die ältere der beiden Datierungen lässt sich leicht mit dem hier postulierten Alter für die Pikunda-Munda-Gruppe in Einklang bringen. Eine detaillierte Auswertung der Befunde und Funde aus Yatou steht gegenwärtig aus (Kap.~\ref{sec:Kamerun}).} Während die für den Pikunda-Munda-Stil charakteristischen Schalen keine Entsprechung im Fundgut des Inneren Kongobeckens finden, so ist Kamm-Wiegeband-Dekor ein starkes Merkmal der ältesten Stile Imbonga, Bonkake und Ingende (ebd. 59--78). Auch ein aus überkreuzenden, feinen Ritzlinien bestehendes Dekor findet sich in zeitgleichen Stilen, allen voran der Lokondola-Gruppe.\footnote{Eine Scherbe dieses Stils fand sich auch in der älteren, in Pikunda erfassten Grube (Kat.-Nr.~8).} Zusammenfassend lässt sich festhalten, dass der Pikunda-Munda-Stil stilistisch einige lose Anbindungen an die zeitgleichen Stilgruppen des Inneren Kongobeckens aufweist, jedoch mit Blick auf die Keramiktechnologie nicht von der weiter östlich gefunden Keramik unterscheidbar ist. Zusammenfassend kann die Pikunda-Munda-Keramik gegenwärtig mit hinreichender Sicherheit in das 2.--1.~Jh. v.~Chr. bis 5.--6.~Jh. n.~Chr. datiert werden.
 
 \paragraph{Verbreitung}\hspace{-.5em}|\hspace{.5em}%
 Die Verbreitung der Pikunda-Munda-Keramik (Abb.~\ref{fig:PIKMUN_Verbreitung}) beschränkt sich auf die Flussläufe des \mbox{Sangha} und \mbox{Likwala}-\mbox{aux}-\mbox{Herbes} von deren Mündung in den Kongo bis Ikelemba am \mbox{Sangha} (Fpl.~260) beziehungsweise Epena am \mbox{Likwala}-\mbox{aux}-\mbox{Herbes} (Fpl.~306).\footnote{Erst im Zuge der Feldarbeiten der Arbeitsgruppe um Richard Oslisly wurde die Fundstelle Pikunda (Fpl.~255) in den frühen 2010er Jahren wieder aufgesucht \parencite[211 Abb.~1, 212\,f. Tab.~1 Nr.~25--26]{MorinRivat.2014}.} Material des Pikunda-Munda-Stils fand sich auch in Maberu (Fpl.~235) und Sungu (Fpl.~236) am Kongo, etwa 50\,km nordöstlich der Mündung des \mbox{Sangha}. Das Verbreitungsgebiet reicht folglich etwa 250\,km in Nord--Süd- und etwa 110\,km in Ost--West-Richtung.
