--- a/chpt/4-2-2-9_KON.tex
+++ b/chpt/4-2-2-9_KON.tex
@@ -30,7 +30,7 @@ Bei insgesamt 66~GE der Konda-Gruppe konnte die Gefäßform bestimmt werden, wob
 Bestimmendes Merkmal der Konda-Keramik ist der hohe Anteil an horizontalen Rillen (Tab.~\ref{tab:Verzierungselemente}: 02.1; 69\,\%), die sich fast ausschließlich innen wie außen am Rand sowie dem Gefäßhals befinden (Anlage~4\subref{fig:KON_Verz}). Daneben weist die Keramik -- deutlich seltener -- horizontale Reihen aus diagonalen (Tab.~\ref{tab:Verzierungselemente}: 04.12; 5\,\%), vertikal stehenden (Tab.~\ref{tab:Verzierungselemente}: 04.15; 5\,\%) oder runden Eindrücken (Tab.~\ref{tab:Verzierungselemente}: 04.11; 2\,\%) sowie diagonalen Kammstrich auf (Tab.~\ref{tab:Verzierungselemente}: 15.1; 4\,\%). Sechs GE sind zudem mit vegetabilischem \mbox{Roulette} verziert, in fünf Fällen handelt es sich um \textit{knotted string}- (Tab.~\ref{tab:Verzierungselemente}: 21.1; Abb.~\ref{fig:KON_Typvertreter}.7) und in einem Fall um \textit{twisted string}-\mbox{Roulette} (Tab.~\ref{tab:Verzierungselemente}: 21.2). Die Rouletteverzierung findet sich in allen Fällen auf dem Gefäßbauch oder der Schulter und tritt immer in Kombination mit anderen Verzierungselementen auf (Anlage~4\subref{fig:KON_Verz}). Trotz des Vorkommens von \mbox{Roulette} wird die Verzierung der Konda-Keramik vor allem von innen wie außen an Rand und Hals der Gefäße zu findenden Riefen und Rillen bestimmt.
 
 \paragraph{Datierung}\hspace{-.5em}|\hspace{.5em}%
-Für die Keramik der Konda-Gruppe liegen keine direkten Radiokohlenstoffdatierungen vor. Unter Vorbehalt der Konda-Gruppe zurechenbare GE wurden in allen drei Grabungsschnitten in Pikunda am mittleren \mbox{Sangha} (Fpl.~255) erfasst. Während das Inventar der rezenten Grube PIK~87/2 (Kat.-Nr.~9) eindeutig vermischt ist und die Fundzusammenhänge durch das Fehlen der Dokumentation des als PIK~87/3 (Kat.-Nr.~10) ausgegrabenen Metallurgiebefundes\footnote{Eine Datierung weist diesen Befund grob in das 11.--13.~Jh. n.~Chr. (KI-2892).} nicht mehr zweifelsfrei belegbar sind, liefern lediglich die Einzelfunde aus der jüngeren Grube A in PIK~87/1 (Kat.-Nr.~8) einen Datierungsansatz. Das vornehmlich durch die Keramik der Mandombe-Gruppe (Kap.~\ref{sec:MDB-Gr}) charakterisierte Inventar datiert in das 13.--15. Jh. n. Chr. (KI-2891). Diese Datierung deutet zumindest eine partielle Gleichzeitigkeit mit der Keramik der Mandombe-Gruppe an. Das Auftreten von Rouletteverzierung, die in größerem Umfang erst mit der mutmaßlich jüngeren Pandama-Gruppe (Kap.~\ref{sec:PDM-Gr}) aufkommt, deutet hingegen auf ein tendenziell jüngeres Alter im Vergleich zur Mandombe-Keramik. Die grundsätzliche Morphologie der Gefäße und vor allem  die rillenverzierten Gefäßhälse und Ränder deuten einen losen Bezug zur Keramik der Bobulu-Gruppe (Kap.~\ref{sec:BBL-Gr}) des \mbox{Ubangi}-Gebiets an.
+Für die Keramik der Konda-Gruppe liegen keine direkten Radiokohlenstoffdatierungen vor. Unter Vorbehalt der Konda-Gruppe zurechenbare GE wurden in allen drei Grabungsschnitten in Pikunda am mittleren \mbox{Sangha} (Fpl.~255) erfasst. Während das Inventar der rezenten Grube PIK~87/2 (Kat.-Nr.~9) eindeutig vermischt ist und die Fundzusammenhänge durch das Fehlen der Dokumentation des als PIK~87/3 (Kat.-Nr.~10) ausgegrabenen Metallurgiebefundes\footnote{Eine Datierung weist diesen Befund grob in das 11.--13.~Jh. n.~Chr. (KI-2892).} nicht mehr zweifelsfrei belegbar sind, liefern lediglich die Einzelfunde aus der jüngeren Grube A in PIK~87/1 (Kat.-Nr.~8) einen Datierungsansatz. Das vornehmlich durch die Keramik der Mandombe-Gruppe (Kap.~\ref{sec:MDB-Gr}) charakterisierte Inventar datiert in das 13.--15.~Jh. n.~Chr. (KI-2891). Diese Datierung deutet zumindest eine partielle Gleichzeitigkeit mit der Keramik der Mandombe-Gruppe an. Das Auftreten von Rouletteverzierung, die in größerem Umfang erst mit der mutmaßlich jüngeren Pandama-Gruppe (Kap.~\ref{sec:PDM-Gr}) aufkommt, deutet hingegen auf ein tendenziell jüngeres Alter im Vergleich zur Mandombe-Keramik. Die grundsätzliche Morphologie der Gefäße und vor allem  die rillenverzierten Gefäßhälse und Ränder deuten einen losen Bezug zur Keramik der Bobulu-Gruppe (Kap.~\ref{sec:BBL-Gr}) des \mbox{Ubangi}-Gebiets an.
 
 \paragraph{Verbreitung}\hspace{-.5em}|\hspace{.5em}%
 Die Verbreitung der Konda-Gruppe beschränkt sich auf einen eng begrenzten Bereich entlang des Oberlaufs des \mbox{Sangha} sowie des prospektierten Abschnitts des \mbox{Ngoko} (Abb.~\ref{fig:KON_Verbreitung}).\footnote{Ähnliche, bislang unveröffentlichte Stücke fanden sich auch bei der Wiederaufnahme der Feldarbeiten durch Manfred~K.~H.~Eggert im Südosten der Republik Kamerun in den späten 1990er Jahren \parencite[siehe][]{Eggert.2002} in Mokounounou (Obj. MKN~97/1:15 ) und Tala-Tala (Obj. TLT~97/101:71). Zur Zeit der Materialaufnahme für diese Arbeit war diese kamerunische Keramik in Tübingen eingelagert und nur eingeschränkt zugänglich.\label{ftn:SOKamerun1997Funde}} Keramik der Konda-Gruppe wurde an insgesamt 21 Fundplätzen beobachtet, wobei Ngama (Fpl.~281) den westlichsten, Leme (Fpl.~269) den nördlichsten und Molanda (Fpl.~258) den südlichsten Fundpunkt bildet.\footnote{Fragliche oder nur unter Vorbehalt der Konda-Gruppe zuweisbare Stücke fanden sich auch in Ngombe am \mbox{Sangha} (Fpl.~252; siehe Anm.~\ref{ftn:Vermischungen}) sowie Mosenge (Fpl.~299) und Munda (Fpl.~304) am oberen Likwala-aux-Herbes.}
