--- a/chpt/4-3-1-1_IMB.tex
+++ b/chpt/4-3-1-1_IMB.tex
@@ -35,7 +35,7 @@ Aufgrund der sehr geringen Anzahl an im Fundgut identifizierten GE des Imbonga-S
 \paragraph{Datierung}\hspace{-.5em}|\hspace{.5em}%
 Die chronologische Position der Imbonga-Gruppe im Inneren Kongobecken wurde von \textsc{Wotzka} (ebd. 66\,f.) auf Basis von insgesamt neun Radiokohlenstoffdatierungen hinlänglich gut eingegrenzt (Abb.~\ref{fig:14C_InnerCongo_Stylegroups}). Während relativ-chronologische Untersuchungen der Inventare des Inneren Kongobeckens die Imbonga-Gruppe klar an den Beginn der von \textsc{Wotzka} (ebd. 67 Tab.~9) erarbeiteten Stilgruppenentwicklung stellten, wiesen die Radiokohlenstoffdatierungen eine starke Streuung auf.\footnote{Gerade die in den 1980er Jahren in Hannover vorgenommenen Radiokohlenstoffdatierungen streuen in einem so hohen Maße, dass sie von \textsc{Wotzka} (1995: 67 Tab.~9 Nr. 1--2, 9--10) als extreme Ausreißer zurückgewiesen werden \parencite[siehe][]{Geyh.1990}. Auch zwei deutlich zu junge Datierungen aus anderen Labors \parencite[67 Tab.~9 Nr. 11--12]{Wotzka.1995} ließen sich nicht mit der erarbeiteten Chronologie in Einklang bringen. Eine kritische Einschätzung der Hannoveraner Daten findet sich erstmals bei \textcite[132\,f.]{Eggert.1987c}.} Am Ende sieht \textsc{Wotzka} (ebd. 67 Tab.~9 Nr. 3--8) sechs der zwölf absoluten Datierungen, die gemeinsam einen Zeitraum zwischen etwa 400--100 v.~Chr. abdecken, als für die Imbonga-Gruppe repräsentativ an.
 
-Eine Radiokohlenstoffdatierung aus der Füllung des Gefäßes in Mobaka (Kat.-Nr.~13) datiert in das \mbox{8.--1.~Jh.} v.~Chr. (KI-2894), während eine Probe, die unterhalb des Gefäßes in Mitula (Fpl.~12) entnommen wurde, in das 6.--1. Jh. v. Chr. (KI-2895) fällt. Die beiden Datierungen decken aufgrund ihrer jeweils hohen Standardfehler einen großen Bereich ab, sind aber grundsätzlich als zeitgleich zu den von \textsc{Wotzka} (ebd. 67 Tab.~9 Nr. 3--8) akzeptierten Datierungen für das Innere Kongobecken anzusehen. 
+Eine Radiokohlenstoffdatierung aus der Füllung des Gefäßes in Mobaka (Kat.-Nr.~13) datiert in das \mbox{8.--1.~Jh.} v.~Chr. (KI-2894), während eine Probe, die unterhalb des Gefäßes in Mitula (Fpl.~12) entnommen wurde, in das 6.--1.~Jh. v.~Chr. (KI-2895) fällt. Die beiden Datierungen decken aufgrund ihrer jeweils hohen Standardfehler einen großen Bereich ab, sind aber grundsätzlich als zeitgleich zu den von \textsc{Wotzka} (ebd. 67 Tab.~9 Nr. 3--8) akzeptierten Datierungen für das Innere Kongobecken anzusehen. 
 
 
 \paragraph{Verbreitung}\hspace{-.5em}|\hspace{.5em}%
