--- a/chpt/6_Schluss.tex
+++ b/chpt/6_Schluss.tex
@@ -12,11 +12,11 @@ Im Zuge der Untersuchung wurden 24 für die Besiedlungsgeschichte des nordwestli
 
 Zusätzlich zur Untersuchung und Systematisierung nach stilistischen Gesichtspunkten wurde die Gefäßkeramik auch auf Herstellungstechniken und Keramiktechnologie hin analysiert. Die Aufbereitung der die genutzten Tone beschreibenden Fabrics ist systematisch für alle aufgenommenen Gefäßeinheiten erfasst (Kap.~\ref{sec:Herstellung2_Fabric}). Auf die Herstellungstechnik hinweisende Makrospuren wurden auf Basis einer 28 Gefäßeinheiten umfassenden Stichprobe im Detail untersucht (Kap.~\ref{sec:Herstellung2_Toepferei}). Innerhalb der archäologischen Stichprobe konnten drei unabhängige Technologietraditionen identifiziert werden (Kap.~\ref{sec:TechnologieTrad}). Die auch an ethnologischem Material beobachteten Herstellungsspuren  lassen sich auf das aus archäologischen Kontexten stammende Fundgut übertragen. Allein jüngere Funde aus dem nordöstlichen Kongobecken wurden bisher in ähnlicher Weise untersucht (Kap.~\ref{sec:NordCongo}). 
 
-Die Synthese der regionalen keramischen Entwicklungslinien erfolgte in Anlehnung an bereits von \textsc{Wotzka} (ebd.) genutzte Konzepte und Methoden (Kap.~\ref{sec:Horizonte}). Im nordwestlichen Kongobecken lassen entlang des Ngoko sowie oberen Sangha verbreitete Stile des 13.–15. Jh. n. Chr. hinreichend starke Ähnlichkeiten untereinander erkennen, um eine Beschreibung als Stiltradition zu rechtfertigen. In der Zusammenschau der existenten Quellen zur Besiedlungsgeschichte des Kongobeckens deuten sich drei regional unabhängig voneinander entstandene stilistische Entwicklungslinien an (Kap.~\ref{sec:Zeitscheiben}): die durch die Imbonga-Gruppe begründete Äquator-Co-Tradition des Inneren Kongobeckens,  eine im nördlichen Bereich des Kongobeckens durch die Batalimo-Maluba-Keramik eingeleitete Entwicklung und eine wiederum davon unabhängige im nordöstlichen Kongobecken.
+Die Synthese der regionalen keramischen Entwicklungslinien erfolgte in Anlehnung an bereits von \textsc{Wotzka} (ebd.) genutzte Konzepte und Methoden (Kap.~\ref{sec:Horizonte}). Im nordwestlichen Kongobecken lassen entlang des Ngoko sowie oberen Sangha verbreitete Stile des 13.--15.~Jh. n.~Chr. hinreichend starke Ähnlichkeiten untereinander erkennen, um eine Beschreibung als Stiltradition zu rechtfertigen. In der Zusammenschau der existenten Quellen zur Besiedlungsgeschichte des Kongobeckens deuten sich drei regional unabhängig voneinander entstandene stilistische Entwicklungslinien an (Kap.~\ref{sec:Zeitscheiben}): die durch die Imbonga-Gruppe begründete Äquator-Co-Tradition des Inneren Kongobeckens,  eine im nördlichen Bereich des Kongobeckens durch die Batalimo-Maluba-Keramik eingeleitete Entwicklung und eine wiederum davon unabhängige im nordöstlichen Kongobecken.
 
 Während die Keramik des nördlichen Abschnitts des Arbeitsgebietes einer eigenständigen Entwicklung folgt, weisen die Keramikgruppen des südlicheren Teils, im westlichen Abschnitt des Kongobeckens, entlang der Flüsse Sangha und Likwala-aux-Herbes, immer wieder Ähnlichkeiten zur Keramik aus dem Inneren Kongobecken auf. Gerade mit Blick auf die untersuchten Fabrics und Töpfereitechniken lassen sich nur wenige Unterschiede aufzeigen. Stile wie die Ngombe-Gruppe weisen sehr starke Ähnlichkeiten zu Stilen der Äquator-Co-Tradition auf und können überzeugend als Teil dieser angesehen werden. Für die älteste Stilgruppe in dieser Region, der Pikunda-Munda-Gruppe, stehen den starken technologischen Ähnlichkeiten eine Reihe von stilistischen Unterschieden entgegen. Dieser Stil ist bislang nur lose mit der zeitgleichen Keramik des Inneren Kongobeckens in Zusammenhang zu bringen. Die Pikunda-Munda-Keramik begründet auch keine eigene stilistische Entwicklung, da sich nach ihrem Ende in keiner jüngeren Stilgruppe belastbare Anknüpfungspunkte finden. Auffällig ist auch die Einführung von Roulette-Verzierung in die Region, die häufig die moderne Keramik bestimmt. Innerhalb der Ngoko-Tradition (Kap.~\ref{sec:Horizonte}) lässt sich eine sukzessive Übernahme und intensive Nutzung dieser Verzierungspraxis beobachten. Im äußersten Süden des Arbeitsgebietes wurde mit der Schamott-gemagerten Keramik der Bobusa-Gruppe mutmaßlich eine weitere eigenständige keramische Entwicklungslinie angeschnitten.
 
-Die hier erarbeitete Besiedlungssequenz des nordwestlichen Kongobeckens wird an manchen Stellen aufgrund unzureichender Quellenlage mit Vorbehalt beschrieben. Diesen Lücken können lediglich neue Feldarbeiten und Grabungen stratifizierter Befunde Abhilfe schaffen. Die vorliegenden Befunde und Funde erbrachten vor allem absolut chronologische Datierungsindizien für die frühen Abschnitte der Sequenz, die erste Phase der Besiedlung in der frühen Eisenzeit.  Für die Epochen ab der Mitte des 1. Jt. n. Chr. muss der vorliegende Datenbestand grundsätzlich als ungenügend eingeschätzt werden. Trotz des umfangreichen Materialkorpus, der durch das River Reconnaissance Project in den 1980er Jahren gewonnen wurde, kann die vorliegende Arbeit nur einen ersten Einblick in die keramische Variabilität des Arbeitsgebietes gewähren. Während die Untersuchung der stilistischen Variation, die vornehmlich morphologische wie dekorative Eigenschaften der Keramik abdeckte, die Basis der Sequenz bildet (Kap.~\ref{sec:Keramiksequenz}--\ref{sec:BesiedlGesch}), stehen Untersuchungen zur Keramiktechnologie noch ganz am Anfang (Kap.~\ref{sec:Herstellung}).
+Die hier erarbeitete Besiedlungssequenz des nordwestlichen Kongobeckens wird an manchen Stellen aufgrund unzureichender Quellenlage mit Vorbehalt beschrieben. Diesen Lücken können lediglich neue Feldarbeiten und Grabungen stratifizierter Befunde Abhilfe schaffen. Die vorliegenden Befunde und Funde erbrachten vor allem absolut chronologische Datierungsindizien für die frühen Abschnitte der Sequenz, die erste Phase der Besiedlung in der frühen Eisenzeit.  Für die Epochen ab der Mitte des 1.~Jt. n.~Chr. muss der vorliegende Datenbestand grundsätzlich als ungenügend eingeschätzt werden. Trotz des umfangreichen Materialkorpus, der durch das River Reconnaissance Project in den 1980er Jahren gewonnen wurde, kann die vorliegende Arbeit nur einen ersten Einblick in die keramische Variabilität des Arbeitsgebietes gewähren. Während die Untersuchung der stilistischen Variation, die vornehmlich morphologische wie dekorative Eigenschaften der Keramik abdeckte, die Basis der Sequenz bildet (Kap.~\ref{sec:Keramiksequenz}--\ref{sec:BesiedlGesch}), stehen Untersuchungen zur Keramiktechnologie noch ganz am Anfang (Kap.~\ref{sec:Herstellung}).
 \end{multicols}
 
 \vspace{1.5em}
