--- a/chpt/KatA17_MUN87_2-1-3.tex
+++ b/chpt/KatA17_MUN87_2-1-3.tex
@@ -118,7 +118,7 @@ Aufgrund der starken Beeinträchtigungen durch das nachlaufende Regenwasser konn
 \noindent Die Grabung erbrachte den folgenden stratigrafischen Befund (Abb.~\ref{fig:MUN87.2-1-3_Planum+Profil_Zeichnung}):
 \begin{itemize}[leftmargin=*, labelindent=1.25em, noitemsep, topsep=0pt]
 	\item [(1)] 10YR 3/3; schwarz-grau humoses Material mit Holzkohle und verziegelten Tonbrocken
-	\item [(2)] 10YR 4/3; Füllmaterial der Keramiksetzung Gef. 1 – Gef. 3, relativ homogenes dunkelbraunes bis dunkelgraues Material mit verziegelten Tonbrocken und verkohlten Palmkernen
+	\item [(2)] 10YR 4/3; Füllmaterial der Keramiksetzung Gef. 1 - Gef. 3, relativ homogenes dunkelbraunes bis dunkelgraues Material mit verziegelten Tonbrocken und verkohlten Palmkernen
 	\item [(3)] 10YR 4/3 bis 7,5YR 5/6; rötlich-gelb-graues Material mit vielen kleinen Lateritbrocken, Holzkohle mit ungebrannten gelben Tonstücken, wenig rot-verziegelte Tonbrocken
 	\item [(4)] 10YR 5/4; gelblich-graues, tonlinsenartiges Material mit Holzkohle und einigen kleinen rot-verziegelten Tonbrocken
 	\item [(5)] 10YR 4/2; relativ homogen durchmischtes dunkelgraues Material mit sehr wenig Keramikfragmenten, dafür aber annähernd vollständigen Gefäßen [Gef. 4 – Gef. 6], Holzkohle und verkohlte Palmkerne, rotverziegelte und teilweise gelbe oder schwarz-braune ungebrannte Tonbrocken enthaltend
