--- a/chpt/KatA2_MLB85_1-3-2.tex
+++ b/chpt/KatA2_MLB85_1-3-2.tex
@@ -87,8 +87,8 @@ Insgesamt: & 2722\,g & \\
 			\toprule 
 			\textbf{Lab-Nr} & \textbf{Datum (bp)} & \textbf{Datum (2-Sigma)} & \textbf{Abtrag} & \textbf{Tiefe (unter NP)} \\ 
 			\midrule 
-			KI-2445 & 2140\( \pm \)200 & 764--680 v.~Chr. (3,6\,\%); 674 v. Chr.--245 n. Chr. (91,8\,\%) & 3 (MLB~85/1-3-2-3; HK 33) & 0,65--0,8\,m \\ 
-			GrN-13585 & 1990\( \pm \)60 & 166 v. Chr.--129 n. Chr. & 4 (MLB~85/1-3-2-4; HK 36) & 0,8--1,05\,m \\ 
+			KI-2445 & 2140\( \pm \)200 & 764--680 v.~Chr. (3,6\,\%); 674 v.~Chr.--245 n.~Chr. (91,8\,\%) & 3 (MLB~85/1-3-2-3; HK 33) & 0,65--0,8\,m \\ 
+			GrN-13585 & 1990\( \pm \)60 & 166 v.~Chr.--129 n.~Chr. & 4 (MLB~85/1-3-2-4; HK 36) & 0,8--1,05\,m \\ 
 			\bottomrule 
 	\end{sftabular}}
 	\caption{MLB 85/1-3-2: \textsuperscript{14}C-Datierungen.}
@@ -106,4 +106,4 @@ Neben der Keramik fanden sich zwei Stücke gebrannter Lehm, die beide konkave Ab
 Aus dem Befund MLB~85/1-3-2 liegen zwei \textsuperscript{14}C-Datierungen vor (Tab.~\ref{tab:MLB85_1-3-3_14C-Daten}). Die absolute Datierung des Befundes wird durch die große Standardabweichung einer Probe (KI-2445) erschwert; diese deckt einen Zeitraum vom 8.~Jh. v.~Chr. bis ins 3.~Jh. n.~Chr. ab. Die zweite Probe (GrN-13585) datiert hingegen zuverlässig um die Zeitenwende (Abb.~\ref{fig:MLB85_1_14C-Kalibration}). Als hinreichend sicherer Datierungsansatz ergibt sich ein Zeitraum vom 2.~Jh. v.~Chr. bis in das 2.~Jh. n.~Chr.\footnote{Die kalibrierten Radiokohlenstoffdatierungen aus dem Befund MLB~85/1-3-2 sind etwas älter als die aus der benachbarten Grube MLB~85/1-3-1 (Kat.-Nr.~1; Abb.~\ref{fig:MLB85_1_14C-Kalibration}). Jedoch überschneiden sich die Datierungsansätze beider Gruben nach der Kalibration im 2-Sigma-Bereich. Auch wurde keine stratigrafische Relation zwischen den beiden Gruben beobachtet und das keramische Fundinventar lässt keine Unterschiede erkennen.}
 
 \paragraph{Interpretation}\hspace{-.5em}|\hspace{.5em}%
-Die Grube MLB~85/1-3-2 ist der direkt südlich liegenden Grube MLB~85/1-3-1 (Kat.-Nr.~1) sehr ähnlich. Aufgrund des geringen Dokumentationsgrades ist der Befund jedoch nicht detaillierter ansprechbar. Die Grube dürfte bis zirka 0,7\,m unter die heutige Oberfläche gereicht haben, bei einem Durchmesser von fast 2\,m.\footnote{Die Dimensionen des Befundes –- mit Ausnahme der Tiefe –- können nur auf Basis der Fotos abgeschätzt werden, da diese Informationen im Gelände nicht dokumentiert wurden. Durch die Grabung wurde ein etwa 1\,$\times$\,1\,$\times$\,1,4\,m großer Teil der Grube erfasst (siehe Abb.~\ref{fig:MLB85-1-3-2_NordProfil}).} Sie dürfte damit etwa ebenso so groß oder sogar etwas größer als die benachbarte Grube MLB~85/1-3-1 gewesen sein.
+Die Grube MLB~85/1-3-2 ist der direkt südlich liegenden Grube MLB~85/1-3-1 (Kat.-Nr.~1) sehr ähnlich. Aufgrund des geringen Dokumentationsgrades ist der Befund jedoch nicht detaillierter ansprechbar. Die Grube dürfte bis zirka 0,7\,m unter die heutige Oberfläche gereicht haben, bei einem Durchmesser von fast 2\,m.\footnote{Die Dimensionen des Befundes -- mit Ausnahme der Tiefe -- können nur auf Basis der Fotos abgeschätzt werden, da diese Informationen im Gelände nicht dokumentiert wurden. Durch die Grabung wurde ein etwa 1\,$\times$\,1\,$\times$\,1,4\,m großer Teil der Grube erfasst (siehe Abb.~\ref{fig:MLB85-1-3-2_NordProfil}).} Sie dürfte damit etwa ebenso so groß oder sogar etwas größer als die benachbarte Grube MLB~85/1-3-1 gewesen sein.
