--- a/chpt/KatA8_PIK87_1.tex
+++ b/chpt/KatA8_PIK87_1.tex
@@ -216,7 +216,7 @@ Sonstige Stilgruppen in Grube A: & 96\,g \\
 \vspace{1em}
 \noindent Die oberen Abträge erbrachten eine sehr charakteristische und formal wie technisch homogene Keramik, die als Mandombe-Stil beschrieben ist (Kap.~\ref{sec:MDB-Gr}).\footnote{Das Material aus dem Befund diente als das definierende Spektrum für die Beschreibung des Mandombe-Stils (Kap.~\ref{sec:MDB-Gr}). Um eine Verwechslung mit dem Pikunda-Munda-Stil, der von \textcite{Eggert.1992} als Keramikgruppe eingeführt wurde, zu vermeiden, wurde ein anderer, aussagefähiger Komplex für die Bennung gesucht. Entsprechende Keramik wurde in keiner anderen Grabung erfasst. Die Oberflächenabsammlung von Mandombe am \mbox{Sangha} (Fpl.~259) enthielt jedoch entsprechendes Material und wurde daher für die Benennung der Stilgruppe ausgewählt.} Sie hebt sich vom ansonsten in der Grabung freigelegten Fundspektrum deutlich ab. Keramik des Mandombe-Stils beschränkt sich auf die in den Profilen beobachtete Tiefe der Grube A und obwohl im Feld keine Trennung der Funde nach den Befunden möglich war, kann als starke Hypothese gelten, dass die Mandombe-Keramik aus Grube A stammt.
 
-Das Inventar besteht aus 13~GE die sicher der stark bauchigen Gefäßform D1\footnote{Das Verhältnis von Bauch- zu Halsdurchmesser, welches als Maß der \textit{Bauchigkeit} gelten kann, liegt zwischen 1,5--2,6; die Werte spiegeln somit leicht bis stark bauchige Gefäße wider. Ein signifikanter Kolmogorow-Smirnow-Test unterstreicht eine zweigipfelige Verteilung, mit dezidiert schwach sowie stark bauchigen Gefäßen. Es scheint kein kontinuierliches Spektrum zwischen Gefäßen mit weniger oder solchen mit stark geschweifter Wandung zu geben. Jedoch beruht diese Beobachtung lediglich auf einer geringen Stichprobengröße.} zugeordnet werden können und 16 weiteren GE, die nicht gut genug erhalten waren, um eine eindeutige Ansprache zu ermöglichen.\footnote{Aufgrund der starken Fragmentierung (Abb.~\ref{fig:PIK87-1_Fragmentierung}) war häufig nur eine eingeschränkte Ansprache der Gefäßform möglich.} Es fanden sich keine Scherben, die einer anderen Gefäßform zugerechnet werden könnten. Ränder sind durchweg kurz und ausbiegend, mit einer gerillten Mündung und gehen in typisch kurze, zylindrische Hälse über. Die Schulterbereiche sind stark abgesetzt, häufig mit einem scharfen Knick an der Innenseite. Die Verzierungen der Keramik des Mandombe-Stils unterscheiden sich deutlich von jener der Pikunda-Munda-Keramik aus der älteren Grube B. Im ersten und zweiten Abtrag fand sich jeweils eine mit \textit{knotted strip}-Roulette (Tab.~\ref{tab:Verzierungselemente}: 21.1) verzierte Scherbe. Beide Stücke entsprechen in ihren weiteren formalen Charakteristika dem ansonsten nicht rouletteverzierten Mandombe-Material. Das früheste Auftreten von Rouletteverzierung im Arbeitsgebiet muss auf Basis dieses Fundes in das 12.--14. Jh. n. Chr. datiert werden.
+Das Inventar besteht aus 13~GE die sicher der stark bauchigen Gefäßform D1\footnote{Das Verhältnis von Bauch- zu Halsdurchmesser, welches als Maß der \textit{Bauchigkeit} gelten kann, liegt zwischen 1,5--2,6; die Werte spiegeln somit leicht bis stark bauchige Gefäße wider. Ein signifikanter Kolmogorow-Smirnow-Test unterstreicht eine zweigipfelige Verteilung, mit dezidiert schwach sowie stark bauchigen Gefäßen. Es scheint kein kontinuierliches Spektrum zwischen Gefäßen mit weniger oder solchen mit stark geschweifter Wandung zu geben. Jedoch beruht diese Beobachtung lediglich auf einer geringen Stichprobengröße.} zugeordnet werden können und 16 weiteren GE, die nicht gut genug erhalten waren, um eine eindeutige Ansprache zu ermöglichen.\footnote{Aufgrund der starken Fragmentierung (Abb.~\ref{fig:PIK87-1_Fragmentierung}) war häufig nur eine eingeschränkte Ansprache der Gefäßform möglich.} Es fanden sich keine Scherben, die einer anderen Gefäßform zugerechnet werden könnten. Ränder sind durchweg kurz und ausbiegend, mit einer gerillten Mündung und gehen in typisch kurze, zylindrische Hälse über. Die Schulterbereiche sind stark abgesetzt, häufig mit einem scharfen Knick an der Innenseite. Die Verzierungen der Keramik des Mandombe-Stils unterscheiden sich deutlich von jener der Pikunda-Munda-Keramik aus der älteren Grube B. Im ersten und zweiten Abtrag fand sich jeweils eine mit \textit{knotted strip}-Roulette (Tab.~\ref{tab:Verzierungselemente}: 21.1) verzierte Scherbe. Beide Stücke entsprechen in ihren weiteren formalen Charakteristika dem ansonsten nicht rouletteverzierten Mandombe-Material. Das früheste Auftreten von Rouletteverzierung im Arbeitsgebiet muss auf Basis dieses Fundes in das 12.--14.~Jh. n.~Chr. datiert werden.
 
 Die in Grube A gemachten Funde deuten eine höhere Funddichte an, als in der älteren Grube B. In der kleineren Grube A fand sich zusammengenommen mehr Keramik, als in der etwa dreimal so tiefen Grube B. Zusätzlich enthielt die Grube noch fast 4,6\,kg Schlacke (Abb.~\ref{fig:PIK87-1_VerteilungFunde}). Das Inventar zeigt keine Anzeichen einer planmäßigen Deponierung von Objekten. Es wurden weder vollständige Gefäße gefunden, noch sind größere Zusammensetzungen möglich gewesen. Keine der in die Grube gelangten GE repräsentiert ein ganzes Gefäß.
 
