--- a/chpt/KatA1_MLB85_1-3-1.tex
+++ b/chpt/KatA1_MLB85_1-3-1.tex
@@ -115,8 +115,8 @@ Insgesamt: & 4462\,g & \\
 			\toprule 
 			\textbf{Lab-Nr} & \textbf{Datum (bp)} & \textbf{Datum (2-Sigma)} & \textbf{Abtrag} & \textbf{Tiefe (unter NP)} \\ 
 			\midrule 
-			GrN-13584 & 1670\( \pm \)110 & 125--605 n. Chr. & 5 (MLB 85/1-3-1-2; HK 18) & 0,9--1,05\,m \\ 
-			KI-2444 & 1930\( \pm \)120 & 342–327 v. Chr. (0,6\,\%) 204 v. Chr.–383 n. Chr. (94,8\,\%) & 7 (MLB 85/1-3-1-4; HK 26) & 1,2--1,39\,m \\ 
+			GrN-13584 & 1670\( \pm \)110 & 125--605 n.~Chr. & 5 (MLB 85/1-3-1-2; HK 18) & 0,9--1,05\,m \\ 
+			KI-2444 & 1930\( \pm \)120 & 342--327 v.~Chr. (0,6\,\%) 204 v.~Chr.--383 n.~Chr. (94,8\,\%) & 7 (MLB 85/1-3-1-4; HK 26) & 1,2--1,39\,m \\ 
 			\bottomrule 
 	\end{sftabular}}
 	\caption{MLB 85/1-3-1: \textsuperscript{14}C-Datierungen.}
